[gd_scene load_steps=3 format=3 uid="uid://dt7qh2itdwrcl"]

[ext_resource type="Script" uid="uid://b4mi5adjbxqnm" path="res://components/text_editor.gd" id="1_hf108"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hf108"]
content_margin_left = 9.0
content_margin_top = 6.0
content_margin_right = 9.0
content_margin_bottom = 6.0
bg_color = Color(0.02745098, 0.078431375, 0.05490196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1764706, 0.23137255, 0.20392157, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TextEditor" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)
script = ExtResource("1_hf108")

[node name="Sheet" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.27
anchor_top = 0.01
anchor_right = 0.73
anchor_bottom = 0.99
theme_override_styles/panel = SubResource("StyleBoxFlat_hf108")

[node name="VBoxContainer" type="VBoxContainer" parent="Sheet"]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="Sheet/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Sheet/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "filename.txt"

[node name="MiddleExpandSpacer" type="Control" parent="Sheet/VBoxContainer/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveBtn" type="Button" parent="Sheet/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Save (Ctrl+S)"
text = "üíæ Save"

[node name="SearchBtn" type="Button" parent="Sheet/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Find (Ctrl+F)"
text = "Search"

[node name="ReplaceBtn" type="Button" parent="Sheet/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Replace (Ctrl+R)"
text = "Replace"

[node name="CloseBtn" type="Button" parent="Sheet/VBoxContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Close (Esc)"
text = "‚ùå Close"

[node name="Editor" type="CodeEdit" parent="Sheet/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 21
wrap_mode = 1

[node name="SearchPanel" type="PanelContainer" parent="Sheet/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Sheet/VBoxContainer/SearchPanel"]
layout_mode = 2

[node name="FindBar" type="HBoxContainer" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer"]
layout_mode = 2

[node name="FindInput" type="LineEdit" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/FindBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search..."

[node name="MatchLabel" type="Label" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/FindBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.9411765)

[node name="FindPrevBtn" type="Button" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/FindBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Previous Match"
text = "‚ñ≤"

[node name="FindNextBtn" type="Button" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/FindBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Next Match"
text = "‚ñº"

[node name="CloseSearchBtn" type="Button" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/FindBar"]
unique_name_in_owner = true
layout_mode = 2
text = "X"
flat = true

[node name="ReplaceBar" type="HBoxContainer" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer"]
layout_mode = 2

[node name="ReplaceInput" type="LineEdit" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/ReplaceBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Replace with..."

[node name="ReplaceOneBtn" type="Button" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/ReplaceBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Replace"

[node name="ReplaceAllBtn" type="Button" parent="Sheet/VBoxContainer/SearchPanel/VBoxContainer/ReplaceBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Replace All"

[node name="Footer" type="HBoxContainer" parent="Sheet/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="Sheet/VBoxContainer/Footer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.54901963)
text = "Ready"
